k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gophprofile
  labels:
    name: gophprofile
    app.kubernetes.io/name: gophprofile
    app.kubernetes.io/part-of: gophprofile
