k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gophprofile
  namespace: gophprofile
  labels:
    app.kubernetes.io/name: gophprofile
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: gophprofile
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - host: gophprofile.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gophprofile-server
                port:
                  name: http
